# marty-core

./: .cliff.toml  .gitignore  .gitleaksignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  THIRD_PARTY_NOTICES.md  deny.toml  dependency-health.yml  docker-compose.dev.yml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: changelog.yml  ci.yml  cleanup-artifacts.yml  license-compliance.yml  mip-release-wallet.yml  organization-quality.yml  release-rc.yml  release-stable.yml  release.yml
docker/: Dockerfile.dev
marty-bindings/: Cargo.toml  README.md  pyproject.toml
marty-bindings/python/marty_rs/: __init__.py
marty-bindings/python/tests/: test_marty_rs.py
marty-bindings/src/: lib.rs
marty-biometrics/: CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
marty-biometrics/python/marty_biometrics/: __init__.py
marty-biometrics/python/marty_biometrics/adapters/: __init__.py
marty-biometrics/python/marty_biometrics/adapters/rust/: __init__.py  adapter.py
marty-biometrics/python/marty_biometrics/ports/: __init__.py  face_verifier.py  types.py
marty-biometrics/python/tests/: __init__.py  test_biometrics.py
marty-biometrics/src/: error.rs  lib.rs  liveness.rs  provider.rs  python.rs  traits.rs  types.rs  wasm.rs
marty-biometrics/src/onnx/: mod.rs  models.rs  pipeline.rs  preprocessing.rs  provider.rs
marty-crypto/: CHANGELOG.md  Cargo.toml  README.md
marty-crypto/src/: bbs.rs  cert_builder.rs  certificate.rs  crl.rs  des.rs  ecdh.rs  ecdsa.rs  ed25519.rs  ed448.rs  error.rs  hashing.rs  iso9796.rs  kdf.rs  keygen.rs  lib.rs  ocsp.rs  pkcs12.rs  rsa.rs  serialization.rs  sod_builder.rs  symmetric.rs
marty-crypto/tests/: cavp_aes_gcm.rs  cavp_ecdh.rs  cavp_ecdsa.rs  cavp_rsa.rs  cavp_sha_hmac.rs  rfc5869_hkdf.rs
marty-didcomm/: Cargo.toml
marty-didcomm/src/: did_resolver.rs  encrypted_envelope.rs  envelope.rs  error.rs  lib.rs  types.rs
marty-iso18013/: Cargo.toml  README.md  pyproject.toml
marty-iso18013/python/marty_iso18013/: __init__.py
marty-iso18013/src/: core.rs  error.rs  lib.rs  protocol.rs  selective.rs  session.rs
marty-iso18013/src/apps/: holder.rs  mod.rs  reader.rs
marty-iso18013/src/transport/: ble.rs  https.rs  mock.rs  mod.rs  nfc.rs
marty-iso18013/tests/: cbor_conformance.rs  cose_conformance.rs  mdoc_structure.rs  selective_disclosure.rs  session_conformance.rs
marty-oid4vci/: Cargo.toml
marty-oid4vci/src/: error.rs  issuer.rs  lib.rs  lti.rs  metadata.rs  proof.rs  signer.rs  types.rs  verifier.rs  wallet.rs
marty-oid4vci/src/formats/: jwt_vc.rs  mdoc.rs  mod.rs  sd_jwt.rs  vds_nc.rs  zk_mdoc.rs
marty-oid4vci/tests/: byok_prepare_assemble.rs  dif_pex_conformance.rs  oid4vp_conformance.rs  sd_jwt_vc_conformance.rs
marty-oid4vci/tests/fixtures/conformance/: presentation_definition.json
marty-oid4vci/tests/fixtures/dif_pex/: pd_basic.json  pd_filter2_simplified.json  pd_input_descriptors.json  ps_example.json
marty-secure-storage/: CHANGELOG.md  Cargo.toml
marty-secure-storage/src/: database.rs  keychain.rs  lib.rs
marty-test-wallet/: Cargo.toml  README.md
marty-test-wallet/src/: main.rs
marty-test-wallet/static/: index.html
marty-types/: .gitignore  Cargo.toml  README.md
marty-types/codegen/: generate.py
marty-types/codegen/templates/: dart_error_codes.dart.j2  dart_namespaces.dart.j2  python_error_codes.py.j2  python_namespaces.py.j2  rust_error_codes.rs.j2  rust_namespaces.rs.j2
marty-types/schema/: error_codes.yaml  namespaces.yaml
marty-types/src/: lib.rs  open_badges.rs
marty-verification/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
marty-verification/python/marty_verification/: __init__.py
marty-verification/python/marty_verification_py/: __init__.py
marty-verification/src/: lib.rs  testdata.rs  vcdm.rs
marty-verification/src/asn1/: crl.rs  master_list.rs  mod.rs  sod.rs
marty-verification/src/bindings/: mod.rs  mod.rs.bak2
marty-verification/src/chip_io/: mod.rs
marty-verification/src/dtc/: mod.rs
marty-verification/src/error/: builders.rs  codes.rs  conversions.rs  mod.rs  types.rs  verification_error.rs
marty-verification/src/issuance/: mod.rs
marty-verification/src/jwk/: jwe.rs  jws.rs  key.rs  mod.rs
marty-verification/src/mdoc/: device_response.rs  mod.rs
marty-verification/src/mrz/: checksum.rs  mod.rs  parser.rs
marty-verification/src/open_badges/: contexts.rs  method_wrapper.rs  mod.rs  ob2.rs  ob3.rs  suite_wrapper.rs  types.rs  x509_suite.rs  x509_verification_method.rs
marty-verification/src/open_badges/contexts/: credentials-v2.jsonld  openbadges-v3.jsonld
marty-verification/src/pkd/: aamva_dts.rs  eudi_lotl.rs  eudi_xml.rs  icao_pkd.rs  mod.rs
marty-verification/src/policy/: claim_evaluator.rs  disclosure.rs  freshness.rs  issuer.rs  mod.rs  ranking.rs  types.rs
marty-verification/src/trust_anchor/: csca.rs  eudi.rs  iaca.rs  mod.rs  registry.rs
marty-verification/src/verification/: chain.rs  emrtd.rs  mdl.rs  mod.rs  vds_nc.rs
marty-verification/tests/: chain_validation_tests.rs  cross_validation.rs  dtc_tests.rs  mdl_conformance.rs  open_badges_conformance.rs  open_badges_interop.rs  open_badges_tests.rs
marty-verification/tests/fixtures/: README.md  w3c_vcdm_v2_official_suite_presentation.json
marty-verification/tests/fixtures/open_badges/: README.md  ob2_verify_request.json  ob3_verify_request.json
marty-zkp/: Cargo.toml  build.rs
marty-zkp/src/: ffi.rs  lib.rs  mdoc_support.rs
marty-zkp/src/cpp/: zk_mock.cpp
marty-zkp/tests/: conformance.rs
scripts/: bump-version.sh  check_release_contract.py  promote-rc.sh  test-feature-combinations.sh
tests/cert_validator/fixtures/nist_pkits/: LICENSE
