[workspace]
members = ["marty-types", "marty-crypto", "marty-verification", "marty-secure-storage", "marty-biometrics", "marty-iso18013", "marty-zkp", "marty-bindings", "marty-oid4vci", "marty-didcomm", "marty-test-wallet"]
resolver = "2"

[workspace.package]
version = "0.1.6"
edition = "2021"
authors = ["Marty Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ElevenID/marty-core"
rust-version = "1.87"

[workspace.dependencies]
# Crypto and certificates
x509-cert = { version = "0.2", features = ["pem", "builder"] }
der = { version = "0.7", features = ["pem", "derive"] }
const-oid = "0.9"
sha1 = { version = "0.10", features = ["oid"] }
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem", "ecdh"] }
p384 = { version = "0.13", features = ["ecdsa", "pkcs8", "ecdh"] }
p521 = { version = "0.13", features = ["ecdsa", "pkcs8", "arithmetic"] }
ecdsa = "0.16"
elliptic-curve = "0.13"
pem-rfc7468 = "0.7"
signature = "2.0"

# RSA support
rsa = { version = "0.9", features = ["sha2", "pem"] }

# PKCS standards
pkcs8 = { version = "0.10", features = ["pem", "encryption"] }
pkcs5 = { version = "0.7", features = ["pbes2"] }
spki = { version = "0.7", features = ["pem"] }

# CMS/CRL/OCSP (PKCS#7, X.509 extensions)
cms = { version = "0.2", features = ["builder"] }
x509-ocsp = "0.2"

# Symmetric encryption
aes-gcm = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
des = "0.8"

# Key derivation
hkdf = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }

# Additional crypto
hmac = "0.12"
cmac = "0.7"
cipher = { version = "0.4", features = ["block-padding"] }

# Ed25519 and X25519
ed25519-dalek = { version = "2.1", features = ["rand_core", "pem"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# Ed448 (for eMRTD Active Authentication)
ed448-goldilocks-plus = "0.16"

# BBS+ signatures (BLS12-381)
zkryptium = { version = "0.4", features = ["bbsplus"] }

# PKCS#12 (for key/cert bundle parsing)
p12 = "0.6"

# Random number generation
rand = "0.8"
rand_core = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "rustls"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-error = "0.2"
axum = "0.8"

# Database (for marty-secure-storage)
rusqlite = { version = "0.39", features = ["bundled-sqlcipher-vendored-openssl"] }
keyring = "3.6"
directories = "6.0"
blake3 = "1.5"

# UUID
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
zeroize = "1.7"

# Python bindings
pyo3 = { version = "0.29.0", features = ["abi3-py311"] }

# Internal crates
marty-crypto = { version = "0.1.5", path = "marty-crypto" }
marty-verification = { version = "0.1.5", path = "marty-verification" }
marty-secure-storage = { version = "0.1.5", path = "marty-secure-storage" }
marty-biometrics = { version = "0.1.5", path = "marty-biometrics" }

# Test/dev dependencies
rcgen = "0.14"
tempfile = "3.14"
proptest = "1.5"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[patch.crates-io]
# Temporary security fork pending https://github.com/spruceid/ssi/pull/706.
ssi-jwt = { git = "https://github.com/ElevenID/ssi-jwt-elevenid", rev = "957c8b0fbf3e4b967fe73c858a22b38e907b3023" }
# Temporary security fork pending https://github.com/spruceid/isomdl/pull/134.
isomdl = { git = "https://github.com/ElevenID/isomdl-elevenid", rev = "069576a64580fc9923b65dcbdad0c2253c44296d" }
