[package]
name = "marty-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "_marty_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
marty-crypto = { path = "../marty-crypto" }
marty-verification = { path = "../marty-verification" }
marty-types = { path = "../marty-types" }

# PyO3 for Python bindings (use workspace version)
pyo3 = { workspace = true, features = ["extension-module", "abi3-py311"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 encoding
base64 = "0.21"

# DateTime for credential timestamps
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime (if needed for async operations)
tokio = { version = "1.35", features = ["rt", "macros"], optional = true }

[features]
default = []
async = ["tokio"]
