[package]
name = "marty-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "_marty_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
marty-crypto = { path = "../marty-crypto" }
marty-oid4vci = { path = "../marty-oid4vci", features = ["lti"] }
marty-didcomm = { path = "../marty-didcomm" }
marty-verification = { path = "../marty-verification" }
marty-types = { path = "../marty-types" }

# PyO3 for Python bindings (use workspace version)
pyo3 = { workspace = true, features = ["abi3-py311"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 encoding
base64 = { workspace = true }

# DateTime for credential timestamps
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime (needed for DIDComm DID resolution)
tokio = { version = "1.35", features = ["rt", "macros"] }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
