[package]
name = "marty-biometrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Biometric verification for the Marty ecosystem"
repository.workspace = true
rust-version.workspace = true

[lib]
name = "marty_biometrics"
# cdylib for Python/WASM bindings, rlib for Rust consumers
crate-type = ["cdylib", "rlib"]

[features]
default = []

# Provider implementations
opencv = []     # Local OpenCV-based face matching
sita = []       # SITA integration
nec = []        # NEC integration
idemia = []     # IDEMIA integration

# Liveness challenge signing/validation
liveness = ["chrono"]

# Python bindings (native only)
python = [
    "pyo3",
    "tokio",
    "image",
    "tracing",
]

# WASM bindings (browser)
wasm = [
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "js-sys",
    "web-sys",
    "console_error_panic_hook",
    "getrandom/js",
]

# Native runtime (for Rust consumers like marty-verifier)
native = [
    "tokio",
    "image",
    "tracing",
]

# Full feature set
full = ["native", "liveness", "opencv"]

[dependencies]
# Always included - core types
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }

# Python bindings (optional)
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py311"], optional = true }

# WASM bindings (optional)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", optional = true }

# Native-only dependencies (not WASM compatible)
tokio = { workspace = true, features = ["sync"], optional = true }
tracing = { workspace = true, optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["jpeg", "png"] }

# Liveness (chrono for timestamp handling)
chrono = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
