[package]
name = "marty-crypto"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pure cryptographic primitives for X.509 certificates, signatures, and encryption"
keywords = ["crypto", "x509", "ecdsa", "eddsa", "rsa"]
categories = ["cryptography", "authentication"]

[lib]
name = "marty_crypto"
crate-type = ["rlib"]

[features]
default = ["ecdsa", "eddsa", "rsa", "x509"]
ecdsa = []           # ECDSA with P-256/P-384/P-521
eddsa = []           # Ed25519 and Ed448
rsa = []             # RSA PKCS#1 v1.5 and PSS
x509 = []            # X.509 certificate parsing
symmetric = []       # AES-GCM, AES-CBC, 3DES
kdf = []             # HKDF, PBKDF2
pkcs12 = []          # PKCS#12 bundle parsing
full = ["ecdsa", "eddsa", "rsa", "x509", "symmetric", "kdf", "pkcs12"]

[dependencies]
# Crypto and certificates
x509-cert = { workspace = true }
der = { workspace = true }
const-oid = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
p521 = { workspace = true }
ecdsa = { workspace = true }
elliptic-curve = { workspace = true }
pem-rfc7468 = { workspace = true }
signature = { workspace = true }

# RSA support
rsa = { workspace = true }

# PKCS standards
pkcs8 = { workspace = true }
pkcs5 = { workspace = true }
spki = { workspace = true }

# CMS/CRL/OCSP
cms = { workspace = true }
x509-ocsp = { workspace = true }

# Symmetric encryption
aes-gcm = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
des = { workspace = true }

# Key derivation
hkdf = { workspace = true }
pbkdf2 = { workspace = true }
hmac = { workspace = true }
cmac = { workspace = true }
cipher = { workspace = true }

# Ed25519 and X25519
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }

# Ed448
ed448-goldilocks-plus = { workspace = true }

# Time
chrono = { workspace = true }

# Encoding
base64 = { workspace = true }

# PKCS#12
p12 = { workspace = true }

# Random
rand = { workspace = true }
rand_core = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Hex encoding (for fingerprints)
hex = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
