[package]
name = "marty-oid4vci"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OID4VCI/OID4VP protocol engine for Marty digital identity platform"
keywords = ["oid4vci", "oid4vp", "openid4vc", "verifiable-credentials", "issuance"]
categories = ["authentication", "cryptography"]

[lib]
name = "marty_oid4vci"
crate-type = ["rlib"]

[features]
default = ["issuer", "jwt_vc_json", "sd_jwt", "mso_mdoc"]
issuer = []         # OID4VCI credential issuer support
verifier = []       # OID4VP verifiable presentation support
wallet = ["dep:reqwest", "dep:tokio"]  # OID4VCI/OID4VP wallet/holder support
jwt_vc_json = []    # W3C VC-JWT credential format
sd_jwt = []         # IETF SD-JWT credential format
mso_mdoc = []       # ISO 18013-5 mDoc credential format
zk_mdoc = ["dep:marty-zkp"]  # ZK proof support for mDoc (Longfellow/Ligero)

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto and signing
ssi = { version = "0.12.0", default-features = false, features = ["ed25519", "secp256r1", "secp256k1", "secp384r1", "rsa"] }
sd-jwt-rs = "0.7"
jsonwebtoken = "9.3"

# ISO 18013-5 mDoc
isomdl = "0.2"
coset = "0.3"
ciborium = { workspace = true }

# JWT and base64
base64 = { workspace = true }

# Key management
p256 = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = "2.5"

# ZK Proofs (optional, behind zk_mdoc feature)
marty-zkp = { path = "../marty-zkp", optional = true }

# HTTP client (optional, behind wallet feature)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }

# Async runtime (optional, pulled in by wallet feature)
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
