[package]
name = "marty-oid4vci"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OID4VCI/OID4VP protocol engine for Marty digital identity platform"
keywords = ["oid4vci", "oid4vp", "openid4vc", "verifiable-credentials", "issuance"]
categories = ["authentication", "cryptography"]

[lib]
name = "marty_oid4vci"
crate-type = ["rlib"]

[features]
default = ["issuer", "jwt_vc_json", "sd_jwt", "mso_mdoc"]
issuer = []         # OID4VCI credential issuer support
verifier = []       # OID4VP verifiable presentation support
wallet = ["dep:reqwest", "dep:tokio"]  # OID4VCI/OID4VP wallet/holder support
lti = ["dep:reqwest", "dep:tokio"]  # Canvas LTI discovery and launch verification
jwt_vc_json = []    # W3C VC-JWT credential format
sd_jwt = []         # IETF SD-JWT credential format
mso_mdoc = []       # ISO 18013-5 mDoc credential format
zk_mdoc = ["dep:marty-zkp"]  # ZK proof support for mDoc (Longfellow/Ligero)

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto and signing
ssi-crypto = { version = "0.2.1", default-features = false, features = ["ed25519", "secp256r1", "secp256k1", "secp384r1"] }
ssi-jwk = { version = "0.4.0", default-features = false, features = ["ed25519", "secp256r1", "secp256k1", "secp384r1"] }
sd-jwt-rs = { git = "https://github.com/ElevenID/sd-jwt-rust", rev = "9244ec551ac56bb4fa7d3a87e50f59b2f36d1925" }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }

# ISO 18013-5 mDoc
isomdl = "0.2"
coset = "0.3"
ciborium = { workspace = true }

# JWT and base64
base64 = { workspace = true }

# Key management
p256 = { workspace = true }
p384 = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = "2.5"
regex = { version = "1", default-features = false, features = ["std"] }

# ZK Proofs (optional, behind zk_mdoc feature)
marty-zkp = { version = "0.1.3", path = "../marty-zkp", optional = true }

# HTTP client (optional, behind wallet feature)
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "rustls"], optional = true }

# Async runtime (optional, pulled in by wallet feature)
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
