[package]
name = "marty-secure-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Encrypted SQLite storage with platform keychain integration"

[lib]
name = "marty_secure_storage"
crate-type = ["rlib"]

[features]
default = []
sqlcipher = ["rusqlite/bundled-sqlcipher"]

[dependencies]
# Database
rusqlite = { workspace = true }

# Keychain
keyring = { workspace = true }
directories = { workspace = true }

# Crypto
blake3 = { workspace = true }
rand = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
tracing = { workspace = true }

# Async
tokio = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Encoding
hex = "0.4"
# Internal crates
marty-types = { version = "0.1.5", path = "../marty-types" }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
