[package]
name = "marty-test-wallet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Browser-driven OID4VCI/OID4VP wallet for Marty lifecycle tests"

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
marty-oid4vci = { version = "0.1.3", path = "../marty-oid4vci", features = ["wallet", "sd_jwt"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
