[package]
name = "marty-types"
version = "0.1.0"
edition = "2021"
authors = ["NetKnights GmbH"]
license = "MIT OR Apache-2.0"
description = "Shared type definitions and constants for Marty ecosystem"
repository = "https://github.com/netknights/marty"

[lib]
name = "marty_types"
crate-type = ["rlib", "cdylib"]

[dependencies]
# Optional dependencies for Python bindings
pyo3 = { version = "0.24", optional = true, features = ["extension-module", "abi3-py39"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
python = ["pyo3"]

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
