[package]
name = "marty-types"
version = "0.1.0"
edition = "2021"
authors = ["Marty Team"]
license = "MIT OR Apache-2.0"
description = "Shared type definitions and constants for Marty ecosystem"
repository = "https://github.com/ElevenID/marty-core"

[lib]
name = "marty_types"
crate-type = ["rlib", "cdylib"]

[dependencies]
# Optional dependencies for Python bindings
pyo3 = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono.workspace = true

[features]
default = []
python = ["pyo3"]

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
