[package]
name = "marty-verification"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Trust chain verification for mDL (IACA) and eMRTD (CSCA)"

[lib]
name = "marty_verification"
crate-type = ["cdylib", "rlib"]

[features]
default = ["iaca", "csca", "icao-client"]
iaca = []           # AAMVA mDL verification
csca = []           # ePassport/eMRTD verification
eudi = []           # EU Digital Identity verification
python = ["pyo3"]   # Python bindings
aamva-client = ["reqwest", "tokio", "moka"]
icao-client = ["reqwest", "tokio", "moka", "ldap3"]
eudi-client = ["reqwest", "tokio", "moka", "quick-xml"]
cert-builder = []   # Certificate building utilities for Python bindings
cross-validation = []  # OpenSSL cross-validation tests
serde = []
test-fixtures = []  # Enable NIST PKITS test fixtures (requires downloading fixtures)
full = ["iaca", "csca", "eudi", "aamva-client", "icao-client", "eudi-client", "serde", "cert-builder"]

[dependencies]
# Internal crate
marty-crypto = { workspace = true, features = ["sod-builder", "cert-builder"] }

# Re-export crypto types
x509-cert = { workspace = true }
der = { workspace = true }
const-oid = { workspace = true }
spki = { workspace = true }
pkcs8 = { workspace = true }
pem-rfc7468 = { workspace = true }
cms = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
p521 = { workspace = true }
elliptic-curve = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
signature = { workspace = true }
hmac = { workspace = true }
ecdsa = { workspace = true }
ed25519-dalek = { workspace = true }

# SSI
ssi = { version = "0.16.0", features = ["w3c", "ed25519", "secp256r1"] }
bs58 = "0.4.0"
iref = "3.2.2"
futures = "0.3"
flate2 = "1.0"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
base64 = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }

# Time
chrono = { workspace = true }

# Optional async dependencies
tokio = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
moka = { workspace = true, optional = true }
ldap3 = { version = "0.11", optional = true }
quick-xml = { version = "0.37", features = ["serialize"], optional = true }

# Optional Python bindings
pyo3 = { workspace = true, optional = true }

# mDoc/mDL support
isomdl = "0.2.0"
hex = "0.4"
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
rcgen = { workspace = true }
time = "0.3"
proptest = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
openssl = "0.10"
