[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "marty-verification-py"
version = "0.1.0"
description = "Python bindings for marty-verification - cryptographic verification and Open Badges support"
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.11"
authors = [
    { name = "Adam Burdett" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
keywords = ["cryptography", "verification", "open-badges", "mdl", "mdoc", "emrtd", "x509"]

[project.urls]
Homepage = "https://github.com/ElevenID/marty-core"
Repository = "https://github.com/ElevenID/marty-core"
Documentation = "https://docs.marty.dev"

[tool.maturin]
python-source = "python"
module-name = "marty_verification_py._marty_verification"
features = ["pyo3/extension-module", "python", "csca", "eudi", "cert-builder"]
